<?xml version="1.0"?>
<package format="2">
  <name>rr_tf_maker</name>
  <version>0.1.0</version>
  <description>The rr_tf_maker package</description>

  <maintainer email="tnwhdgks@g.skku.edu">tnwhdgks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rr_common</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>rr_common</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rr_common</exec_depend>


  <export>

  </export>
</package>
